# app2nix

./: .gitignore  Dockerfile  LICENSE  README.md  analyze_deb.py  default.nix  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt  server.py  start_server.sh  universal_analyze.py
.github/workflows/: ci.yml  docker.yml  pages.yml  release.yml  tests.yml
docs/: API.md  EXAMPLES.md  FAQ.md  INSTALL.md  USAGE.md
docs/_site/: CNAME  index.html
docs/screenshots/: README.md  take_screenshots.py
lib/: deb_to_nix.py
static/: index.html
templates/: default.nix
tests/: test_api.py  test_lib.py
utils/: __init__.py
